ChangeLog

*********** release of 0.16.0

20150303
	Added ln_get_constellation
	Lukasz Komsta, Petr Kubanek

*********** release of 0.15.0

20140822
	Compiles under MinGWin

	Petr Kubanek

20130324
	Fixed configure.in for automake-1.13

	Asterios Dramis, Petr Kubanek

20121031
	src/elliptic_motion.c
		Fixed algorithm, use H instead of G
	src/julian_day.c
	lntest/test.c
		Fixes MINGW compilation

	Pascal Boye, Liam Girdwood, Petr Kubanek

20120910
	CMakeLists.txt
	src/CMakeLists.txt
	lntest/CMakeLists.txt
	examples/CMakeLists.txt
		Fixed cmake build.

	rise_set.c
	rise_set.h
		Added _offset functions, probably fixed #2616747.

	Petr Kubanek

20120428
	julian_day.c
		Removed not-needed BSD_SOURCE define
	
	Petr Kubanek

20120111
	utility.c:
	utility.h:
	julian_day.c:
		Fix problems with double redefinition, pointed by Lukasz Michalik
	
	Petr Kubanek

*********** release of 0.14.0

20110730
	airmass.c:
		Added ln_get_alt_from_airmass function

	doc/doxyfile.in,doc/doxyfile
		Generate input doxyfile from doxyfile.in
	
	Petr Kubanek

20090917
	sidereal_time.c:
		Fix problem with double transformation of degrees to hours, pointed by Edward Falk

*********** release of 0.13.0

20090514
	heliocentric_time.h:
	heliocentric_time.c:
	test.c:
		Added heliocentric time corrections calculations.

	Petr Kubanek

20090420
	julian_day.h: 
		Removed "#ifndef __WIN32__" to make ln_get_date_from_timet function available in win32

	ln_types.h:
		Changed tv_sec type from long to time_t to match standard definition
		Clarified field documentation for ln_nutation

	julian_day.c:
		Removed "#ifndef __WIN32__" to make ln_get_date_from_timet function available in win32
		Remove platform-dependent code form ln_get_date_from_sys. The function now simply makes a call to gettimeofday() - a Win32 implementation is supplied in utility.c, and this function is no longer limited to one-second precision under Windows.

	nutation.c:
		Fixed two values in nutation coefficients table